# diffeq

./: .gitignore  ARCHITECTURE_TRANSFORMATION_SUMMARY.md  ASYNC_INTEGRATION_SUMMARY.md  CI_DEBUG_SUMMARY.md  CMakeLists.txt  COMMERICAL_LICENSE  COMPOSABLE_ARCHITECTURE.md  DOCUMENTATION_SETUP.md  Doxyfile  IMPROVEMENTS_SUMMARY.md  LICENSE  PARALLELISM_USAGE.md  README.md  SEAMLESS_INTEGRATION_SUMMARY.md  TEMPLATE_FIXES_SUMMARY.md  TEST_TIMEOUT_CONFIGURATION.md  TIMEOUT_INTEGRATION_SUMMARY.md  debug_adaptive_bdf.cpp  debug_bdf.cpp  debug_bdf_order.cpp  debug_detailed_bdf.cpp  debug_detection.cpp  debug_fixed_bdf.cpp  debug_jacobian.cpp  debug_newton.cpp  debug_newton_detailed.cpp  debug_scipy_bdf.cpp  parallelism_integration_demo  parallelism_integration_demo.cpp  simple_standard_parallelism  simple_test.cpp  test_advanced_parallelism  test_bdf_coefficients.cpp  test_bdf_comparison.cpp  test_bdf_fixed.cpp  test_bdf_integrator.cpp  test_bdf_math.cpp  test_docs.py  test_fixed_simple.cpp  test_new_sde_hierarchy.cpp  (+7 more)
.github/workflows/: docs-deploy.yml  docs.yml  docs.yml.disabled  tests.yml
bindings/: python.cpp
docs/: ASIO_INTEGRATION_GUIDE.md  ASYNC_DESIGN_PHILOSOPHY.md  HIGH_PERFORMANCE_SDE_SUMMARY.md  OUTPUT_FACILITIES_GUIDE.md  README.md  STANDARD_PARALLELISM.md  index.md
docs/api/: README.md
docs/examples/: README.md
docs/performance/: README.md
docs/templates/: header_template.md
examples/: README.md  advanced_asio_integration.cpp  advanced_gpu_async_demo.cpp  advanced_integrators_usage.cpp  asio_integration_demo.cpp  composable_facilities_demo.cpp  comprehensive_output_facilities_demo.cpp  coroutine_integration_demo.cpp  high_performance_sde_demo.cpp  interface_usage_demo.cpp  parallelism_usage_demo.cpp  quick_test.cpp  realtime_signal_processing.cpp  rk4_integrator_usage.cpp  sde_demo.cpp  sde_usage_demo.cpp  seamless_parallel_timeout_demo.cpp  simple_standard_parallelism.cpp  simplified_parallel_usage.cpp  standard_parallelism_demo.cpp  state_concept_usage.cpp  std_async_integration_demo.cpp  test_advanced_parallelism.cpp  test_dop853.cpp  test_rk4_only.cpp  timeout_integration_demo.cpp  working_integrators_demo.cpp
examples/scalar_ode/: hello.cpp
include/: diffeq.hpp
include/async/: async_integrator.hpp
include/core/: abstract_integrator.hpp  adaptive_integrator.hpp  composable_integration.hpp  concepts.hpp  integrator_concept.hpp  parallel_timeout_integrator.hpp  realtime_integrator.hpp  state.hpp  state_creator.hpp  timeout_integrator.hpp
include/core/composable/: async_decorator.hpp  event_decorator.hpp  integrator_builder.hpp  integrator_decorator.hpp  interpolation_decorator.hpp  interprocess_decorator.hpp  output_decorator.hpp  parallel_decorator.hpp  (+4 more)
include/examples/: interface_usage.hpp  parallelism_usage.hpp  sde_usage.hpp  standard_parallelism.hpp
include/execution/: advanced_executor.hpp  hardware_support.hpp  modern_executor.hpp  parallel.hpp  parallel_builder.hpp  parallelism_facade.hpp  parallelism_facade_clean.hpp  parallelism_facade_impl.hpp
include/interfaces/: integration_interface.hpp
include/plugins/: tensor_plugin.hpp
include/sde/: advanced_sde_solvers.hpp  sde_base.hpp  sde_solvers.hpp
include/signal/: signal_processor_clean.hpp  signal_processor_old.hpp  signal_processor_simple.hpp
include/solvers/: bdf_solver.hpp  dop853_solver.hpp  dop853_solver_new.hpp  dop853_solver_old.hpp  euler_solvers.hpp  lsoda_solver.hpp  radau_solver.hpp  rk23_solver.hpp  rk45_solver.hpp  rk4_solver.hpp
test/integration/: test_concepts_only.cpp  test_interface_basic.cpp  test_interface_factory.cpp  test_modernized_interface.cpp  test_parallelism_simple.cpp  test_sde_integration.cpp  test_sde_solvers.cpp  test_signal_only.cpp  test_simple_interface.cpp  test_simplified_parallelism.cpp  test_standard_parallelism.cpp
test/unit/: test_advanced_integrators.cpp  test_dop853.cpp  test_high_performance_sde.cpp  test_output_facilities.cpp  test_rk4_integrator.cpp  test_state_concept.cpp
tools/scripts/: build_docs.bat  build_docs.sh  generate_header_docs.py
(+22 files in other folders)
